<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/scan"
        android:title="@string/scan" />

    <item
        android:id="@+id/readVIN"
        android:title="@string/readVIN" />

    <item android:id="@+id/readOilTemp"
        android:title="@string/readOilTemp" />

    <item
        android:id="@+id/dtcs"
        android:title="@string/dtcSettings">
        <menu>

            <item
                android:id="@+id/readDTC"
                android:title="@string/readDTC" />
            <item
                android:id="@+id/clearDTC"
                android:title="@string/clearDTC" />

        </menu>
    </item>
    <item
        android:id="@+id/disconnect"
        android:title="@string/disconnect" />

    <item
        android:id="@+id/exit"
        android:title="@string/exit" />

</menu>